# DigitalForensics

./: .gitignore  CHANGELOG.md  CLI_FINAL_TEST_RESULTS.md  CLI_GUI_INTEGRATION_TEST.md  CLI_TEST_RESULTS.md  DEPLOYMENT_GUIDE.md  ENHANCED_COLLECTION_REPORT.md  ENHANCED_SYSTEM_TEST.bat  LICENSE.txt  PROFESSIONAL_UPGRADE_SUMMARY.md  PROJECT_SUMMARY.md  README.md  docs.md  run-final-test.bat
TriageIR-CLI/: Cargo.toml  PERFORMANCE.md  README.md  README_PROFESSIONAL.md  TESTING.md  USAGE.md  build-professional.bat  build.bat  build.sh  comprehensive-scan-ANKIT-20250812-205408.json  enhanced-test.json  gui-test.json  live-system-scan-ANKIT-20250812-202835.json  quick-test.bat  quick-test.json  real-system-data-ANKIT-20250812-204216.json  release-test.json  run-sample-scan.bat  sample-scan.json  scan_results.json  scan_results_new.json  test-build.bat  test-output.json  test-results.json  test.bat  test_execution_evidence.rs  test_execution_only.rs  test_output.json  test_output_final.json  validate_output.py  verify-code.py
TriageIR-CLI/examples/: test_event_logs.rs
TriageIR-CLI/src/: comprehensive_tests.rs  event_logs.rs  evidence_package.rs  forensic_types.rs  integration_tests.rs  lib.rs  logger.rs  main.rs  main_complex.rs  main_efficient.rs  main_professional.rs  main_simple.rs  main_test.rs  network.rs  performance_tests.rs  persistence.rs  prefetch.rs  processes.rs  scheduled_tasks.rs  shimcache.rs  system_info.rs  test_error_scenarios.rs  types.rs
TriageIR-GUI/: README.md  SETUP.md  dev-start.bat  index.html  live-data-validator.js  main.js  package.json  renderer.js  sample-test-data.json  test-gui.bat  test-gui.js  test-validation.js
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  INSTALLATION_GUIDE.md  QUICK_START_GUIDE.md  USB_DEPLOYMENT_GUIDE.md  (+1 more)
(+39 files in other folders)
